Fix: Change textarea comp due to scrollbar flicker issues with last comp

--- a/assets/stylesheets/Posts/PostForm.scss
+++ b/assets/stylesheets/Posts/PostForm.scss
@@ -10,16 +10,16 @@
     outline: none;
     font-size: 14px;
     margin-bottom: 6px;
-    transition: 2s !important;
+    transition: 0.5s;
 
     &:focus {
       border: 2px solid #99DAFD;
     }
     &.open {
-      height: 80px !important;
+      min-height: 80px;
     }
     &.closed {
-      height: 40px !important;
+      min-height: 40px;
       margin: 0;
     }
   }
